@@ -79,12 +79,15 @@ dtmfselectinput6=16
 dtmfselectinput7=17
 
 # RPi GPIO Accessory DTMF Control examples
+# Outputs:  dtmfoutputs defines number of outputs.  Subsequent 4 lines can be repeated
 dtmfoutputs=1
 dtmfgpioout1pin=15
 dtmfgpioout1label=shack_light
 dtmfgpioout1on=31
 dtmfgpioout1off=41
 
+# Inputs have nothing to do with dtmf.  dtmfinputs defines how many inputs.
+# Subsequent 2 lines can be repeated
 dtmfinputs=1
 dtmfgpioin1pin=8
 dtmfgpioin1label=cabinet_door
@@ -161,7 +164,7 @@ talkbackaudioi2cbit=7
 
 # announcemediatype determines the player used
 
-# Switcher can use "ir" or "gpio" or "i2c"
+# Switcher can use "ir" or "gpio" "html" or "i2c"
 # IR uses a TX on GPIO pin 12
 # GPIO uses pins 36, 37, 38, 33, 31, 29, 23, 24.  Can be enabled with ir or i2c
 # i2c uses FMS6501A on Output channel 1
@@ -181,11 +184,17 @@ outputhdmiquadcode=nec:0x18
 outputi2caddress=3
 outputi2cquadchannel=9
 
+# Bitfocus Companion (html) server address & port (no trailing slash)
+networkctrlurl=http://192.0.1.176:8888
+# Other net commands have leading slash
+outputquadnetcommand=/press/bank/1/11
+
 input0name=Controller
 output0code=nec:0x17
 #output0code=2nec:0x17 (daisy chain)
 output0hdmiswitchpin=36
 output0i2cchannel=1
+output0netcommand=/press/bank/1/
 output0audioi2cbit=0
 
 input1name=Stream Input
@@ -194,6 +203,7 @@ input1activegpiopin=32
 output1code=nec:0x12
 output1hdmiswitchpin=37
 output1i2cchannel=2
+output1netcommand=/press/bank/1/1
 output1audioi2cbit=1
 input1announcemediatype=jpg
 input1announcemediafile=/home/pi/tmp/input1.jpg
@@ -205,6 +215,7 @@ input2activegpiopin=35
 output2code=nec:0x59
 output2hdmiswitchpin=38
 output2i2cchannel=3
+output2netcommand=/press/bank/1/2
 output2audioi2cbit=2
 input2announcemediatype=jpg
 input2announcemediafile=/home/pi/tmp/input2.jpg
@@ -216,6 +227,7 @@ input3activegpiopin=18
 output3code=nec:0x08
 output3hdmiswitchpin=33
 output3i2cchannel=4
+output3netcommand=/press/bank/1/3
 output3audioi2cbit=3
 input3announcemediatype=jpg
 input3announcemediafile=/home/pi/tmp/input3.jpg
@@ -228,6 +240,7 @@ output4code=nec:0x18
 #output4code=2nec:0x12 (daisy chain, not quad)
 output4hdmiswitchpin=31
 output4i2cchannel=5
+output4netcommand=/press/bank/1/4
 output4audioi2cbit=4
 input4announcemediatype=jpg
 input4announcemediafile=/home/pi/tmp/input4.jpg
@@ -239,6 +252,7 @@ input5activegpiopin=16
 output5code=2nec:0x59
 output5hdmiswitchpin=29
 output5i2cchannel=6
+output5netcommand=/press/bank/1/5
 output5audioi2cbit=5
 input5announcemediatype=jpg
 input5announcemediafile=/home/pi/tmp/input5.jpg
@@ -251,6 +265,7 @@ output6code=2nec:0x08
 #output6code=2nec:0x08 (daisy chain)
 output6hdmiswitchpin=23
 output6i2cchannel=7
+output6netcommand=/press/bank/1/6
 output6audioi2cbit=6
 input6announcemediatype=jpg
 input6announcemediafile=/home/pi/tmp/input6.jpg
@@ -263,6 +278,7 @@ output7code=2nec:0x08
 #output7code=2nec:0x12 (daisy chain)
 output7hdmiswitchpin=24
 output7i2cchannel=8
+output7netcommand=/press/bank/1/7
 output7audioi2cbit=7
 input7announcemediatype=jpg
 input7announcemediafile=/home/pi/tmp/input7.jpg
